# sam3-2026-01-31

./: .gitignore  08hs-palms-03-zglw-superJumbo.webp.sqlite3  20251129_152106.jpg.sqlite3  2026-02-14.ipynb  Google Gemini.html  README.md  am_ptools.py  am_ptools_tests.py  efd.ipynb  efd2.ipynb  efd2.py  extract_pdf_highlights.ipynb  main.py  myst.yml  pca.ipynb  poly2mask.ipynb  processing_videos.ipynb  pyefd_example.py  pyproject.toml  report.md  report_2026-02-24_15-11-32.md  report_2026-02-24_15-11-32_printer.csv  roadside.py  rtest.ipynb  sam3-2026-01-31.ipynb  script_with_tests.py  sqlite_tables.ipynb  tech_notes.md  test.myst.md  test_images.db  test_roadside.py  visualizer.ipynb  wkt.ipynb
Google Gemini_files/: RotateCookiesPage.html  destination  destination_002  gtm.js  js  m=_b.es
docs/: conf.py  tech_notes.md
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  roadside.html  search.html  searchindex.js  sphinx-reading-durations.json
docs/_build/.doctrees/: environment.pickle  index.doctree  roadside.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/doctrees/: environment.pickle  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  roadside.html  search.html  searchindex.js  sphinx-reading-durations.json  tech_notes.html  usage.html
docs/mydocs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sphinx-reading-durations.json  tech_notes.html
src/roadside/: roadside.py
(+17 files in other folders)
