[project]
name = "sam3-2026-01-31"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exif>=1.6.1",
    "icecream>=2.1.10",
    "ipywidgets>=8.1.8",
    "nbconvert>=7.17.0",
    "pandas>=3.0.0",
    "pdf-highlight-extractor>=0.1.2",
    "plotly>=6.5.2",
    "rasterio>=1.5.0",
    "rpy2>=3.6.4",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "ultralytics>=8.4.9",
]
